--- a/source/sass/blocks/product-week.scss
+++ b/source/sass/blocks/product-week.scss
@@ -3,11 +3,6 @@
   flex-direction: column;
   padding-top: 31px;
   padding-bottom: 35px;
-  /*
-  background-image: url("../../img/bg-zigzag-line.svg");
-  background-repeat: no-repeat;
-  background-position: bottom;
-*/
 
   @include viewport--md {
     display: grid;
@@ -124,6 +119,12 @@
   margin: 0 auto;
 
   background-image: url("../../img/triple-set-mobile@1x.jpg");
+  background-repeat: no-repeat;
+
+  @include retina {
+    background-image: url("../../img/triple-set-mobile@2x.jpg");
+    background-size: 260px auto;
+  }
 
   @include viewport--md {
     width: 333px;
@@ -133,6 +134,11 @@
 
     grid-column: 3 / 5;
     grid-row: 2 / 6;
+
+    @include retina {
+      background-image: url("../../img/triple-set-tablet@2x.jpg");
+      background-size: 333px auto;
+    }
   }
 
   @include viewport--lg {
@@ -143,6 +149,11 @@
 
     grid-column: 4 / 7;
     grid-row: 1 / 6;
+
+    @include retina {
+      background-image: url("../../img/triple-set-desktop@2x.jpg");
+      background-size: 525px auto;
+    }
   }
 }
 
