Добавил векторный спрайт

--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -17,6 +17,7 @@
   height: fit-content;
   margin-top: 22px;
   margin-left: 14px;
+  fill: #63d1bb;
 
   &:hover .copyright__link-img {
     fill: #46c1ae;
