--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -165,6 +165,7 @@
   right: 36px;
   top: 23px;
   opacity: 0.5;
+  fill: #149080;
 
   @include viewport--md {
     top: 29px;
@@ -176,6 +177,7 @@
   right: 27px;
   top: 22px;
   opacity: 0.5;
+  fill: #149080;
 
   @include viewport--md {
     right: 34px;
