--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -287,6 +287,7 @@
   display: flex;
   flex-direction: column;
   cursor: pointer;
+  user-select: none;
   font-weight: bold;
   font-size: 17px;
   line-height: 18px;
@@ -483,6 +484,7 @@
   position: absolute;
   right: 7px;
   top: 10px;
+  fill: #cccccc;
 
   @include viewport--md {
     right: 26px;
@@ -497,6 +499,7 @@
   position: absolute;
   right: 3px;
   top: 10px;
+  fill: #cccccc;
 
   @include viewport--md {
     right: 22px;
