Добавил модальное окно на Главную и в Каталог

--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -158,6 +158,7 @@
 
 .catalog__product-tobasket {
   fill: #cccccc;
+  cursor: pointer;
 
   &:hover .catalog__product-tobasket-img {
     fill: $color-green;
