--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,6 +23,7 @@
 @import "blocks/product-week";
 @import "blocks/about";
 @import "blocks/reviews";
+@import "blocks/slider";
 @import "blocks/contacts";
 @import "blocks/page-footer";
 @import "blocks/social";
