Сделал ПП Index

--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -24,6 +24,7 @@
   @include viewport--lg {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     width: 1050px;
   }
 }
