--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -22,11 +22,9 @@
   }
 
   @include viewport--md {
-    margin-right: 80px;
-
     display: block;
     margin-top: auto;
-    margin-bottom: auto;
+    margin-bottom: 58px;
   }
 
   &:hover .page-footer__logo-img {
