--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -85,6 +85,7 @@
   width: 243px;
   font-size: 15px;
   margin: 0;
+  min-height: 270px;
 
   line-height: 30px;
   color: $color-brown;
@@ -92,6 +93,7 @@
   @include viewport--md {
     font-size: 17px;
     width: 657px;
+    min-height: auto;
   }
 
   @include viewport--lg {
