--- a/source/sass/blocks/product-week.scss
+++ b/source/sass/blocks/product-week.scss
@@ -8,14 +8,12 @@
     display: grid;
     padding-bottom: 54px;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 111px;
   }
 
   @include viewport--lg {
     padding-top: 53px;
     padding-bottom: 74px;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 111px 151px auto 119px;
   }
 }
 
@@ -30,12 +28,13 @@
     font-size: 43px;
     line-height: 50px;
     margin-top: 12px;
+    margin-bottom: 48px;
     grid-column: 1 / 4;
   }
 
   @include viewport--lg {
     z-index: 1;
-
+    margin-bottom: 0;
     font-size: 53px;
     line-height: 57px;
 
@@ -91,7 +90,7 @@
   @include viewport--lg {
     grid-column: 2 / 4;
     grid-row: 2 / 3;
-    margin-top: 44px;
+    margin-top: 5px;
   }
 }
 
@@ -109,6 +108,7 @@
   @include viewport--lg {
     grid-column: 2 / 4;
     grid-row: 3 / 4;
+    margin-top: 26px;
   }
 }
 
@@ -217,6 +217,6 @@
   @include viewport--lg {
     grid-column: 2 / 4;
     grid-row: 5 / 6;
-    padding: 4px;
+    padding: 1px;
   }
 }
