Исправил переполнение элементов

--- a/source/sass/blocks/catalog-header.scss
+++ b/source/sass/blocks/catalog-header.scss
@@ -26,7 +26,7 @@
 
 .catalog-header__title {
   margin: 0;
-  padding-top: 74px;
+  padding: 74px 15px 15px;
 
   font-weight: bold;
   font-size: 27px;
