--- a/source/sass/blocks/product-week.scss
+++ b/source/sass/blocks/product-week.scss
@@ -14,6 +14,7 @@
     padding-top: 53px;
     padding-bottom: 74px;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto auto 1fr auto 52px;
   }
 }
 
@@ -42,6 +43,7 @@
     grid-row: 1 / 2;
 
     margin-top: 63px;
+    margin-bottom: 6px;
   }
 }
 
@@ -90,7 +92,7 @@
   @include viewport--lg {
     grid-column: 2 / 4;
     grid-row: 2 / 3;
-    margin-top: 5px;
+    margin-top: 28px;
   }
 }
 
@@ -108,7 +110,8 @@
   @include viewport--lg {
     grid-column: 2 / 4;
     grid-row: 3 / 4;
-    margin-top: 26px;
+    margin-top: 55px;
+    margin-bottom: 9px;
   }
 }
 
@@ -197,7 +200,9 @@
     grid-row: 4 / 5;
     margin-bottom: 0;
 
-    padding-top: 34px;
+    margin-top: 17px;
+    margin-bottom: 11px;
+    padding: 20px;
   }
 }
 
@@ -217,6 +222,6 @@
   @include viewport--lg {
     grid-column: 2 / 4;
     grid-row: 5 / 6;
-    padding: 1px;
+    padding: 7px;
   }
 }
