--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -137,7 +137,7 @@
   width: 100vw;
   margin-left: -30px;
   height: 457px;
-  background-image: url("../../img/map-mobile@1x.jpg");
+  background-image: url("img/map-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 
@@ -150,7 +150,7 @@
 
   @include viewport--md {
     margin-left: -50px;
-    background-image: url("../../img/map-tablet@1x.jpg");
+    background-image: url("img/map-tablet@1x.jpg");
   }
 
   @include viewport--lg {
@@ -158,7 +158,7 @@
     width: 527px;
     grid-column: 4 / -1;
     grid-row: 2 / 5;
-    background-image: url("../../img/map-desktop@1x.jpg");
+    background-image: url("img/map-desktop@1x.jpg");
   }
 }
 
