--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -148,7 +148,7 @@
   position: absolute;
 
   &:checked + .form__checkbox-img {
-    background-image: url("img/icon-tick.svg");
+    background-image: url("/img/icon-tick.svg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: 23px;
