--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -2,12 +2,12 @@
   min-height: 489px;
 
   background-color: #f9f9f9;
-  background-image: url("/img/hero-mobile@1x.jpg");
+  background-image: url("../img/hero-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: center -17px;
 
   @include retina {
-    background-image: url("/img/hero-mobile@2x.jpg");
+    background-image: url("../img/hero-mobile@2x.jpg");
     background-size: 575px auto;
   }
 
@@ -15,20 +15,20 @@
     min-height: 746px;
     display: flex;
     flex-direction: column;
-    background-image: url("/img/hero-tablet@1x.jpg");
+    background-image: url("../img/hero-tablet@1x.jpg");
     background-position: center 0;
 
     @include retina {
-      background-image: url("/img/hero-tablet@2x.jpg");
+      background-image: url("../img/hero-tablet@2x.jpg");
       background-size: 1148px auto;
     }
   }
 
   @include viewport--lg {
-    background-image: url("/img/hero-desktop@1x.jpg");
+    background-image: url("../img/hero-desktop@1x.jpg");
 
     @include retina {
-      background-image: url("/img/hero-desktop@2x.jpg");
+      background-image: url("../img/hero-desktop@2x.jpg");
       background-size: 1148px auto;
     }
   }
@@ -57,6 +57,7 @@
 
   @include viewport--lg {
     margin-top: -17px;
+    width: auto;
   }
 }
 
@@ -128,6 +129,11 @@
   font-size: 19px;
   color: $color-white;
   padding: 25px 10px 14px 30px;
+
+  & span {
+    width: 150px;
+    display: block;
+  }
 
   &--left-hover:hover .product__list-link-interior {
     opacity: 0.7;
