--- a/source/sass/global/reboot.scss
+++ b/source/sass/global/reboot.scss
@@ -12,16 +12,9 @@ html {
   box-sizing: border-box;
 }
 
-img,
-video,
-svg {
-  display: block;
+img {
   max-width: 100%;
   height: auto;
-}
-
-textarea {
-  resize: none;
 }
 
 a {
