--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,6 +12,7 @@
 @import "global/reboot";
 @import "global/helpers";
 @import "global/container";
+@import "global/fonts";
 
 //Blocks
 @import "blocks/page";
