--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -95,7 +95,6 @@
 .catalog__product-name {
   margin: 28px 28px 6px;
 
-  padding-right: 20px;
   font-weight: bold;
   font-size: 17px;
   color: $color-black;
@@ -110,14 +109,12 @@
 
   @include viewport--md {
     font-size: 20px;
-    margin: 28px 32px 6px;
-
-    padding-right: 40px;
+    margin: 28px 59px 6px 32px;
   }
 
   @include viewport--lg {
-    margin: 28px 28px 6px;
-    padding-right: 31px;
+    margin: 28px 27px 6px;
+    padding-right: 24px;
   }
 }
 
@@ -134,7 +131,7 @@
   }
 
   @include viewport--lg {
-    margin: 0 28px 0;
+    margin: 0 26px 0;
   }
 }
 
@@ -142,7 +139,7 @@
   display: flex;
   justify-content: space-between;
   margin: 0 28px;
-  padding: 22px 0 26px;
+  padding: 22px 0 24px;
 
   border-top: 1px solid $color-grey;
 
