--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,12 +1,13 @@
 .contacts {
   @include viewport--lg {
-    padding-bottom: 96px;
+    padding-bottom: 104px;
   }
 }
 
 .contacts__top-img {
   width: 100%;
   margin: 0 auto;
+  display: block;
 
   @include viewport--lg {
     width: 1050px;
@@ -35,25 +36,25 @@
   @include viewport--lg {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 74px 1fr 1fr auto;
+    grid-template-rows: 72px 1fr 1fr auto;
   }
 }
 
 .contacts__title {
-  margin: 40px 0 26px;
+  margin: 30px 0 27px;
 
   font-weight: bold;
   font-size: 18px;
   line-height: 30px;
 
   @include viewport--md {
-    margin: 71px 0 49px;
+    margin: 66px 0 49px;
     font-size: 43px;
     line-height: 50px;
   }
 
   @include viewport--lg {
-    margin: 77px 0 38px;
+    margin: 79px 0 36px;
     font-size: 53px;
     line-height: 57px;
     grid-column: 2 / 4;
@@ -92,10 +93,12 @@
 .contacts__email {
   margin-bottom: 30px;
   border-bottom: 1px solid $form-border;
+  margin-left: -2px;
 
   @include viewport--md {
     margin-bottom: 0;
-    margin-right: 33px;
+    margin-right: 20px;
+    padding-left: 4px;
     height: fit-content;
   }
 
@@ -116,10 +119,10 @@
 
 .contacts__address-subtitle,
 .contacts__email-subtitle {
-  margin-right: 33px;
+  margin-right: 32px;
 
   @include viewport--md {
-    margin-right: 28px;
+    margin-right: 24px;
   }
 }
 
@@ -136,8 +139,9 @@
   overflow: hidden;
   width: 100vw;
   margin-left: -30px;
-  height: 457px;
+  height: 454px;
   background-image: url("../img/map-mobile@1x.jpg");
+  background-color: #f6e5d4;
   background-repeat: no-repeat;
   background-size: cover;
 
@@ -149,6 +153,7 @@
   }
 
   @include viewport--md {
+    height: 458px;
     margin-left: -50px;
     background-image: url("../img/map-tablet@1x.jpg");
   }
@@ -163,7 +168,7 @@
 }
 
 .contacts__write {
-  margin: 38px 0 38px;
+  margin: 41px 0 39px;
   display: flex;
 
   @include viewport--md {
@@ -171,7 +176,7 @@
   }
 
   @include viewport--lg {
-    margin: 58px 0 9px;
+    margin: 61px 0 0 1px;
     grid-column: 2 / 4;
     grid-row: 4 / 5;
   }
