--- a/source/sass/blocks/product-week.scss
+++ b/source/sass/blocks/product-week.scss
@@ -2,17 +2,17 @@
   display: flex;
   flex-direction: column;
   padding-top: 31px;
-  padding-bottom: 35px;
+  padding-bottom: 28px;
 
   @include viewport--md {
     display: grid;
-    padding-bottom: 54px;
+    padding-bottom: 49px;
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
 
   @include viewport--lg {
     padding-top: 53px;
-    padding-bottom: 74px;
+    padding-bottom: 71px;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: auto auto 1fr auto 52px;
   }
@@ -38,7 +38,7 @@
     font-size: 53px;
     line-height: 57px;
 
-    grid-column: 2 / 5;
+    grid-column: 2 / 6;
     grid-row: 1 / 2;
 
     margin-top: 63px;
@@ -61,7 +61,7 @@
     width: 128px;
     margin-left: auto;
     padding-left: 2px;
-    padding-top: 10px;
+    padding-top: 8px;
   }
 
   @include viewport--lg {
@@ -109,8 +109,20 @@
   @include viewport--lg {
     grid-column: 2 / 4;
     grid-row: 3 / 4;
-    margin-top: 55px;
+    margin-top: 56px;
     margin-bottom: 9px;
+  }
+}
+
+.product-week__inner {
+  @include viewport--md {
+    grid-column: 3 / 5;
+    grid-row: 2 / 6;
+  }
+
+  @include viewport--lg {
+    grid-column: 4 / 7;
+    grid-row: 1 / 6;
   }
 }
 
@@ -120,54 +132,38 @@
   height: 315px;
   margin: 0 auto;
 
-  background-image: url("../img/triple-set-mobile@1x.jpg");
-  background-repeat: no-repeat;
-
-  @include retina {
-    background-image: url("../img/triple-set-mobile@2x.jpg");
-    background-size: 260px auto;
-  }
-
   @include viewport--md {
     width: 333px;
     height: 404px;
 
-    background-image: url("../img/triple-set-tablet@1x.jpg");
-
     grid-column: 3 / 5;
     grid-row: 2 / 6;
-
-    @include retina {
-      background-image: url("../img/triple-set-tablet@2x.jpg");
-      background-size: 333px auto;
-    }
   }
 
   @include viewport--lg {
     width: 525px;
     height: 636px;
 
-    background-image: url("../img/triple-set-desktop@1x.jpg");
-
     grid-column: 4 / 7;
     grid-row: 1 / 6;
-
-    @include retina {
-      background-image: url("../img/triple-set-desktop@2x.jpg");
-      background-size: 525px auto;
-    }
   }
 }
 
 .product-week__specification-item {
   border-bottom: 1px solid $color-grey;
   display: flex;
-  padding-top: 7px;
+  padding-top: 6px;
   min-height: 39px;
+
+  @include viewport--lg {
+    padding-top: 4px;
+    margin-left: 1px;
+  }
 }
 
 .product-week__specification-type {
   width: 97px;
+  padding-right: 15px;
 }
 
 .product-week__specification-type,
@@ -192,6 +188,7 @@
     line-height: 24px;
     margin-right: 43px;
     margin-bottom: 29px;
+    padding-right: 4px;
   }
 
   @include viewport--lg {
@@ -208,6 +205,7 @@
   padding: 14px;
   width: 260px;
   margin: 0 auto;
+  text-align: center;
 
   @include viewport--md {
     grid-column: 1 / 3;
@@ -220,6 +218,6 @@
   @include viewport--lg {
     grid-column: 2 / 4;
     grid-row: 5 / 6;
-    padding: 7px;
+    padding: 15px;
   }
 }
