--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -51,6 +51,7 @@
   @include viewport--md {
     display: block;
     width: 100%;
+    height: 100%;
     margin-top: -13px;
     z-index: 4;
   }
@@ -64,7 +65,7 @@
 .product__slogan {
   margin: 0;
 
-  padding: 73px 32px 20px;
+  padding: 73px 30px 20px;
   font-weight: bold;
   font-size: 27px;
   line-height: 30px;
@@ -72,7 +73,7 @@
   color: $color-otherblack;
 
   @include viewport--md {
-    padding: 157px 50px 20px;
+    padding: 155px 50px 20px;
 
     font-size: 43px;
     line-height: 50px;
