--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -140,9 +140,7 @@
   width: 100vw;
   margin-left: -30px;
   height: 454px;
-  background-image: url("../img/map-mobile@1x.jpg");
   background-color: #f6e5d4;
-  background-repeat: no-repeat;
   background-size: cover;
 
   iframe {
@@ -155,7 +153,6 @@
   @include viewport--md {
     height: 458px;
     margin-left: -50px;
-    background-image: url("../img/map-tablet@1x.jpg");
   }
 
   @include viewport--lg {
@@ -163,8 +160,11 @@
     width: 527px;
     grid-column: 4 / -1;
     grid-row: 2 / 5;
-    background-image: url("../img/map-desktop@1x.jpg");
   }
+}
+
+.contacts__map-img {
+  width: 100%;
 }
 
 .contacts__write {
