--- a/source/sass/blocks/form-header.scss
+++ b/source/sass/blocks/form-header.scss
@@ -21,7 +21,8 @@
     margin-top: auto;
 
     width: 100%;
-    height: auto;
+    height: 100%;
+    margin-bottom: -1px;
   }
 
   @include viewport--lg {
