--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,7 +1,5 @@
 .main-nav {
-  position: absolute;
-  top: 78px;
-  left: 0;
+  position: static;
 
   display: none;
   flex-direction: column;
@@ -23,13 +21,17 @@
   }
 
   &--no-js {
-    /*   position: static; */
-
     display: flex;
+    padding-top: 79px;
+    width: 100vh;
+    margin-left: -30px;
   }
 
   &--open {
     display: flex;
+    padding-top: 79px;
+    width: 100vh;
+    margin-left: -30px;
   }
 }
 
@@ -144,7 +146,7 @@
   }
 
   @include viewport--lg {
-    width: 45%;
+    width: 69%;
 
     transform: translateY(0);
   }
@@ -177,6 +179,7 @@
     &--form {
       padding-top: 34px;
       padding-left: 37px;
+      margin-right: 128px;
     }
   }
 }
@@ -186,6 +189,15 @@
 
   @include viewport--lg {
     display: block;
+  }
+}
+
+.main-nav__inner-item--sale {
+  display: none;
+
+  @include viewport--lg {
+    display: block;
+    width: 158px;
   }
 }
 
