--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,7 +1,7 @@
 .page-header {
   position: relative;
 
-  height: 79px;
+  min-height: 79px;
   box-shadow: 0 1px 0 $color-grey, inset 0 1px 0 $color-grey;
   background-color: $color-white;
 
@@ -18,7 +18,7 @@
   position: absolute;
   top: 22px;
   left: 49.6%;
-
+  z-index: 155;
   width: 86px;
   height: 35px;
   cursor: pointer;
