--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -146,7 +146,7 @@
   }
 
   @include viewport--lg {
-    width: 69%;
+    width: 43%;
 
     transform: translateY(0);
   }
@@ -165,6 +165,7 @@
   }
 
   @include viewport--lg {
+    height: 89px;
     width: 220px;
     margin-right: 0;
     padding-right: 20px;
@@ -179,7 +180,6 @@
     &--form {
       padding-top: 34px;
       padding-left: 37px;
-      margin-right: 128px;
     }
   }
 }
@@ -189,6 +189,7 @@
 
   @include viewport--lg {
     display: block;
+    width: 220px;
   }
 }
 
@@ -197,7 +198,7 @@
 
   @include viewport--lg {
     display: block;
-    width: 158px;
+    width: 220px;
   }
 }
 
@@ -210,6 +211,7 @@
   }
 
   @include viewport--lg {
+    align-self: self-start;
     width: 35.2%;
   }
 }
@@ -240,6 +242,8 @@
   }
 
   @include viewport--lg {
+    height: 89px;
+
     &--card {
       padding-left: 22px;
     }
